Домашнее задание к занятию 12.05 "Сетевое взаимодействие в K8S. Часть 2"/yamls/multitool_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
    - name: multitool-port
      port: 9002
      targetPort: 8080
