Домашнее задание к занятию 12.05 "Сетевое взаимодействие в K8S. Часть 2"/yamls/nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-port
      port: 9001
      targetPort: 80
