Домашнее задание к занятию 12.05 "Сетевое взаимодействие в K8S. Часть 2"/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: multitool-svc
                port:
                  number: 9002
